--- a/notebooks/hcp_publications.ipynb
+++ b/notebooks/hcp_publications.ipynb
@@ -7,13 +7,15 @@
    "source": [
     "### HCP Publications Dataset\n",
     "- **Description:** Human Connectome Project (HCP) publications and citation networks.\n",
-    "- **Data Source:** [aggregate_titles_embeddings_umap_2d_with_info.parquet](https://www.dropbox.com/scl/fi/uj14y2hre4he2iafpativ/aggregate_titles_embeddings_umap_2d_with_info.parquet?rlkey=tjey12v6cru3iq88xitytefsr&dl=1)\n",
-    "  - **Potential columns for visualization:**\n",
+    "- **Data Source:**\n",
+    "    - points: [aggregate_titles_embeddings_umap_2d_with_info.parquet](https://www.dropbox.com/scl/fi/uj14y2hre4he2iafpativ/aggregate_titles_embeddings_umap_2d_with_info.parquet?rlkey=tjey12v6cru3iq88xitytefsr&dl=1)\n",
+    "    - links: [citation-links-hcp3.parquet](https://www.dropbox.com/scl/fi/3om0epfc2ukkad2ld87rs/citation-links-hcp3.parquet?rlkey=3ldck9m0hs7snswixn2qdts8i&dl=1)\n",
+    "- **Potential columns for visualization:**\n",
     "    - **X & Y Coordinates:** `x`, `y`\n",
     "    - **Point Size:** `n_cits` (citation count)\n",
     "    - **Color:** `main_field` (research domain)\n",
     "    - **Label:** `title`\n",
-    "  - **Related code file:** [hcp.py](https://github.com/thorwhalen/imbed_data_prep/blob/main/imbed_data_prep/hcp.py)"
+    "- **Related code file:** [hcp.py](https://github.com/thorwhalen/imbed_data_prep/blob/main/imbed_data_prep/hcp.py)"
    ]
   },
   {
@@ -34,14 +36,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "id": "ce55cd80",
    "metadata": {},
    "outputs": [],
    "source": [
     "ext = '.parquet'\n",
     "src = 'https://www.dropbox.com/scl/fi/uj14y2hre4he2iafpativ/aggregate_titles_embeddings_umap_2d_with_info.parquet?rlkey=tjey12v6cru3iq88xitytefsr&dl=1'\n",
-    "target_filename = 'aggregate_titles_embeddings_umap_2d_with_info.parquet'"
+    "target_filename = 'aggregate_titles_embeddings_umap_2d_with_info.parquet'\n",
+    "\n",
+    "links_src = 'https://www.dropbox.com/scl/fi/3om0epfc2ukkad2ld87rs/citation-links-hcp3.parquet?rlkey=3ldck9m0hs7snswixn2qdts8i&dl=1'\n",
+    "links_target_filename = 'citation-links-hcp3.parquet'"
    ]
   },
   {
@@ -80,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "f9853d50",
    "metadata": {},
    "outputs": [],
@@ -91,7 +96,8 @@
     "    getter = tabled.get_table\n",
     "# acquire_data takes care of caching locally too, so next time access will be faster\n",
     "# (If you want a fresh copy, you can delete the local cache file manually.)\n",
-    "data = cosmodata.acquire_data(src, target_filename, getter=getter)"
+    "data = cosmodata.acquire_data(src, target_filename, getter=getter)\n",
+    "links = cosmodata.acquire_data(links_src, links_target_filename, getter=getter)"
    ]
   },
   {
@@ -134,6 +140,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "aa917dfc-20cd-4e5e-bbd0-b4ab01d55824",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DataFrame shape: (4891305, 3)\n",
+      "First row\n",
+      "------------------------------------------------------------\n",
+      "citing_pub_id        245658\n",
+      "cited_pub_id     2013150886\n",
+      "date             2002-01-01\n"
+     ]
+    }
+   ],
+   "source": [
+    "cosmodata.print_dataframe_info(links, exclude_cols, mode=mode)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ec1444ff",
    "metadata": {},
@@ -153,23 +182,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b8da8b37",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "102101cd74344cf2a210ba6d6b58d91c",
+       "version_major": 2,
+       "version_minor": 1
+      },
+      "text/plain": [
+       "Cosmograph(background_color=None, components_display_state_mode=None, focused_point_ring_color=None, hovered_p…"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cosmo(\n",
     "    data,\n",
     "    point_x_by=\"x\",\n",
     "    point_y_by=\"y\",\n",
-    "    # point_size_by=\"n_cits\",\n",
-    "    # point_color_by=\"main_field\",\n",
-    "    # point_id_by=\"id\",\n",
-    "    # point_label_by=\"title\",\n",
-    "    # point_color_palette=[\"#FF6347\", \"#4682B4\", \"#3CB371\"],\n",
-    "    # point_size_range=[5, 20],\n",
-    "    # show_labels=True,\n",
-    "    # render_links=False,\n",
+    "    point_size_by=\"n_cits\",\n",
+    "    point_color_by=\"main_field\",\n",
+    "    point_id_by=\"id\",\n",
+    "    point_label_by=\"title\",\n",
+    "    point_color_palette=[\"#FF6347\", \"#4682B4\", \"#3CB371\"],\n",
+    "    point_size_range=[5, 20],\n",
+    "    show_labels=True,\n",
+    "    render_links=False,\n",
     ")"
    ]
   },
@@ -185,10 +230,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "8eab7d15",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "64f72947628a4c6297e0ce3002cdd20c",
+       "version_major": 2,
+       "version_minor": 1
+      },
+      "text/plain": [
+       "Cosmograph(background_color=None, components_display_state_mode=None, disable_simulation=False, fit_view_on_in…"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cosmo(\n",
     "    data,\n",
@@ -220,28 +281,81 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2fcd942",
+   "id": "b7f66a5a-ee16-4eab-ac56-ef17ec9e09d2",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "print"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "f2fcd942",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2f3c104722504baeb32f03a31867191c",
+       "version_major": 2,
+       "version_minor": 1
+      },
+      "text/plain": [
+       "Cosmograph(background_color=None, components_display_state_mode=None, focused_point_ring_color=None, hovered_p…"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cosmo(\n",
     "    data,\n",
     "    links=links,\n",
-    "    link_source_by=\"id\",\n",
-    "    link_target_by=\"cited_id\",\n",
-    "    link_color_by=\"link_strength\",\n",
-    "    link_color=\"#999999\",\n",
+    "    point_size_by=\"n_cits\",\n",
+    "    point_color_by=\"main_field\",\n",
+    "    point_id_by=\"id\",\n",
+    "    link_source_by=\"citing_pub_id\",\n",
+    "    link_target_by=\"cited_pub_id\",\n",
     "    link_width=1,\n",
-    "    link_arrows=True,\n",
-    "    render_links=True,\n",
+    "    link_arrows=False,\n",
+    "    render_links=False,\n",
     "    show_labels=False,\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "79495f42-97ed-47fd-9af7-d930851981c6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "64f8d17e-2de7-4861-9aad-fe0e9a44ef72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph.capture_screenshot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a35b404-fc62-4969-95aa-03a21cdfc277",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "p12",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
