--- a/notebooks/spotify_playlists.ipynb
+++ b/notebooks/spotify_playlists.ipynb
@@ -111,6 +111,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "d8050fee-38fa-4ae9-8361-7544dbee6166",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "5c5619f3",
    "metadata": {},
@@ -175,21 +183,21 @@
     "\n",
     "- Each point is a track\n",
     "- X: `danceability`, Y: `energy`\n",
-    "- Color by `playlist_name` (useful if multiple playlists were merged)\n",
+    "- Color by `mode`\n",
     "- Size by `valence` (how positive the track feels)\n",
     "- Dynamic labels show `track_name`\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "55323fd7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ae3c734d72d444382747fb4823b3aea",
+       "model_id": "6feed7621efa412fb2e18076fed9266b",
        "version_major": 2,
        "version_minor": 1
       },
@@ -197,7 +205,7 @@
        "Cosmograph(background_color='#111111', components_display_state_mode=None, focused_point_ring_color=None, hove…"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +215,7 @@
     "    data,\n",
     "    point_x_by=\"danceability\",\n",
     "    point_y_by=\"energy\",\n",
-    "    point_color_by=\"playlist_name\",\n",
+    "    point_color_by=\"mode\",\n",
     "    point_size_by=\"valence\",\n",
     "    point_label_by=\"track_name\",\n",
     "    show_dynamic_labels=True,\n",
@@ -238,7 +246,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "21747e6367f54a949b2a4eca62563864",
+       "model_id": "4b33cedfc4f34ec48c3a355c120f2c63",
        "version_major": 2,
        "version_minor": 1
       },
@@ -287,7 +295,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0a2043b650c6446cb0baa75cd154dba7",
+       "model_id": "d7b1b10e63ae403eabc750fa4fbfad9c",
        "version_major": 2,
        "version_minor": 1
       },
@@ -332,7 +340,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "p12",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
