--- a/notebooks/spotify_playlists.ipynb
+++ b/notebooks/spotify_playlists.ipynb
@@ -340,7 +340,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "p12",
    "language": "python",
    "name": "python3"
   },
